Installing new dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,68 +1,52 @@
 {
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "sourceType": "module",
-    "allowImportExportEverywhere": false,
-    "codeFrame": false
-  },
-  "extends": ["airbnb", "plugin:prettier/recommended"],
-  "plugins": [
-    "babel",
-    "react",
-    "jsx-a11y",
-    "import",
-    "react-hooks",
-    "prettier"
-  ],
-  "env": {
-    "es6": true,
-    "node": true,
-    "browser": true
-  },
-  "rules": {
-    "max-len": ["error", { "code": 100 }],
-    "prefer-promise-reject-errors": ["off"],
-    "react/jsx-filename-extension": ["off"],
-    "react/prop-types": ["warn"],
-    "no-return-assign": ["off"],
-    "prettier/prettier": "error",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error",
-    "react/require-default-props": ["warn"],
-    "react/jsx-indent": ["error", 4],
-    "react/jsx-indent-props": ["error", 4],
-    "react/jsx-first-prop-new-line": "off",
-    "react/jsx-closing-bracket-location": "off",
-    "react/forbid-prop-types": "off",
-    "no-mixed-operators": "off",
-    "react/jsx-props-no-spreading": "off",
-    "arrow-parens": "off",
-    "linebreak-style": 0,
-    "id-length": [
-      2,
-      {
-        "min": 3,
-        "exceptions": [
-          "id",
-          "e",
-          "p",
-          "li",
-          "td",
-          "th",
-          "Ul",
-          "to",
-          "as",
-          "xs",
-          "sm",
-          "i"
-        ]
-      }
-    ],
-    "react/default-props-match-prop-types": [
-      "error",
-      { "allowRequiredDefaults": true }
-    ],
-    "import/no-cycle": "off",
-    "no-use-before-define": ["off"]
-  }
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+        "sourceType": "module",
+        "allowImportExportEverywhere": false,
+        "codeFrame": false
+    },
+    "extends": ["airbnb", "plugin:prettier/recommended"],
+    "plugins": ["babel", "react", "jsx-a11y", "import", "react-hooks", "prettier"],
+    "env": {
+        "es6": true,
+        "node": true,
+        "browser": true
+    },
+    "rules": {
+        "import/extensions": ["off"],
+        "no-undef": ["error", { "typeof": false }],
+        "consistent-return": ["off"],
+        "no-unused-expressions": ["off"],
+        "prefer-promise-reject-errors": ["off"],
+        "prettier/prettier": ["error", { "endOfLine": "auto" }, { "usePrettierrc": true }],
+        "import/no-unresolved": ["off"],
+        "react/react-in-jsx-scope": ["off"],
+        "react/jsx-filename-extension": ["off"],
+        "no-unsafe-negation": "off",
+        "no-return-assign": ["off"],
+        "no-console": ["error"],
+        "react/prop-types": ["error"],
+        "import/no-absolute-path": ["off"],
+        "max-len": ["error", { "code": 100 }],
+        "react/require-default-props": ["warn"],
+        "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
+        "react/jsx-first-prop-new-line": "off",
+        "react/jsx-closing-bracket-location": "off",
+        "react/forbid-prop-types": "off",
+        "no-mixed-operators": "off",
+        "react/jsx-props-no-spreading": "off",
+        "arrow-parens": "off",
+        "linebreak-style": 0,
+        "id-length": [
+            2,
+            {
+                "min": 3,
+                "exceptions": ["id", "e", "p", "li", "td", "th", "Ul", "to", "as", "xs", "sm", "i"]
+            }
+        ],
+        "react/default-props-match-prop-types": ["error", { "allowRequiredDefaults": true }],
+        "import/no-cycle": "off",
+        "no-use-before-define": ["off"]
+    }
 }
