--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,11 +8,6 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [12.x, 14.x, 16.x]
-
         steps:
             - uses: actions/checkout@v3
               with:
@@ -21,7 +16,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 16
-            - name: Instal dependencies
+            - name: Install dependencies
               run: npm instal
             - name: Lint
               run: npm run eslint
