--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         steps:
             - uses: actions/checkout@v3
               with:
@@ -17,6 +17,6 @@ jobs:
               with:
                   node-version: 16
             - name: Install dependencies
-              run: npm install
+              run: yarn install
             - name: Lint
               run: npm run eslint
