--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,3 +20,7 @@ jobs:
               run: yarn install
             - name: Lint
               run: npm run eslint
+            - name: Build
+              run: npm run build
+            - name: Test
+              run: npm run test
